playing with column breaks via css and html

--- a/chapter3.qmd
+++ b/chapter3.qmd
@@ -1,10 +1,11 @@
 ---
-title: "Chapter 3"
+title: "The Manuscripts"
 ---
 
 # Chapter 3
 
 This is the third chapter of my Quarto book.
+In this chapter, I describe the corpus of T-manuscripts in detail.
 
 ```{r}
 # R code goes here
