--- a/chapter4.qmd
+++ b/chapter4.qmd
@@ -88,26 +88,27 @@ process_line <- function(line) {
     expan_exists <- xml_find_first(choice, ".//expan")
     
     if (!is.na(abbr_exists) && !is.na(expan_exists)) {
-      # If <abbr> and <expan> tags exist, replace the <choice> element with the <reg> text inside <expan>
-      expan_reg_text <- xml_text(xml_find_first(choice, ".//expan//reg"))
-
-      # Ensure to replace the entire <choice> content with <expan><reg> text only once
-      xml_set_text(choice, expan_reg_text)
-      
+      # If <abbr> and <expan> tags exist, extract only the <reg> text from <expan>
+      reg_text <- xml_text(xml_find_first(choice, ".//expan/reg"))
+      xml_set_text(choice, reg_text)
     } else {
-      # If no <abbr>/<expan>, process the <orig>/<reg> tags
+      # For non-abbreviation choices, keep original behavior
       orig_text <- xml_text(xml_find_first(choice, ".//orig"))
-      
-      # Remove the <reg> elements, making sure only the <orig> text remains
-      reg_elements <- xml_find_all(choice, ".//reg")
-      xml_remove(reg_elements)
-      
-      # Set the text of the <choice> element to the text of the <orig> tag
       xml_set_text(choice, orig_text)
     }
   }
   
-  # Return the processed text of the line
+  # Now we want to remove any <reg> elements entirely
+  reg_elements <- xml_find_all(line, ".//reg")
+  xml_remove(reg_elements)
+  
+  # Replace <lb/> tags with HTML line break
+  lb_elements <- xml_find_all(line, ".//lb")
+  for (lb in lb_elements) {
+    xml_set_text(lb, "<br>")
+  }
+  
+  # Get the text of the line
   return(xml_text(line))
 }
 
