playing with text rendering together, not in the tabset layout. This version has all three renderings stacked on top of each other with sticky headers. Close, but not exactly what I'm aiming for

--- a/chapter4.qmd
+++ b/chapter4.qmd
@@ -9,9 +9,10 @@ This is the fourth chapter of my Quarto book.
 library(xml2)
 ```
 
-::: {.panel-tabset}
+<div class="edition-container">
 
-## Transcription
+<div class="edition-column" id="transcription">
+<h2>Transcription</h2>
 
 ```{r results='asis'}
 # Read the XML content
@@ -96,7 +97,7 @@ formatted_text <- paste(c("<div class='column-break'>", processed_lines, "</div>
 cat(formatted_text, sep = "")
 ```
 
-## Expanded Abbreviations
+</div> <div class="edition-column" id="expanded"> <h2>Expanded Abbreviations</h2>
 
 ```{r results='asis'}
 # Read the XML content
@@ -190,7 +191,7 @@ formatted_text <- paste(c("<div class='column-break'>", processed_lines, "</div>
 cat(formatted_text, sep = "")
 ```
 
-## Regularized Text
+</div> <div class="edition-column" id="regularized"> <h2>Regularized Text</h2>
 
 ```{r results='asis'}
 # Read the XML content
@@ -275,4 +276,4 @@ formatted_text <- paste(c("<div class='column-break'>", processed_lines, "</div>
 cat(formatted_text, sep = "")
 ```
 
-:::
+</div> </div> 
