Updated chapter titles in .qmd files and in .yml, renamed edition files to be labeled "appendix" rather than "chapter 4"

--- a/appendix-T-D.qmd
+++ b/appendix-T-D.qmd
@@ -2,7 +2,7 @@
 title: "T-D"
 ---
 
-This is the edition for Paris, BnF Français 19525.
+# Paris, BnF Français 19525
 
 ```{r setup, include=FALSE}
 # Load the xml2 package
