--- a/chapter1.qmd
+++ b/chapter1.qmd
@@ -1,10 +1,7 @@
 ---
-title: "Chapter 1"
+title: "On Digital Editing"
 ---
 
-# Chapter 1
+# On Digital Editing
 
-This is the first chapter of my Quarto book.
-
-```{r}
-# R code goes here
+This is the first chapter of my Quarto book...
