--- a/appendix-T-E.qmd
+++ b/appendix-T-E.qmd
@@ -1,8 +1,8 @@
 ---
-title: "T-F^1^"
+title: "T-E"
 ---
 
-This is the edition for Manchester, John Rylands Library, French 6.
+# Paris, BnF Arsenal, 3516
 
 ```{r setup, include=FALSE}
 # Load the xml2 package
@@ -17,7 +17,7 @@ library(xml2)
 
 ```{r results='asis'}
 # Read the XML content
-xml_file <- read_xml("data/T-F1.xml")
+xml_file <- read_xml("data/T-E.xml")
 
 # Extract both <l>, <cb>, and <pb> elements
 lines <- xml_find_all(xml_file, "//text//l | //text//cb | //text//pb")
@@ -104,7 +104,7 @@ cat(formatted_text)
 
 ```{r results='asis'}
 # Read the XML content
-xml_file <- read_xml("data/T-F1.xml")
+xml_file <- read_xml("data/T-E.xml")
 
 # Extract the <l>, <cb>, and <pb> elements inside the <text> element
 lines <- xml_find_all(xml_file, "//text//l | //text//cb | //text//pb")
@@ -200,7 +200,7 @@ cat(formatted_text)
 
 ```{r results='asis'}
 # Read the XML content
-xml_file <- read_xml("data/T-F1.xml")
+xml_file <- read_xml("data/T-E.xml")
 
 # Extract the <l>, <cb>, and <pb> elements inside the <text> element
 lines <- xml_find_all(xml_file, "//text//l | //text//cb | //text//pb")
