--- a/appendix-T-F2.qmd
+++ b/appendix-T-F2.qmd
@@ -1,8 +1,8 @@
 ---
-title: "T-B"
+title: "T-F^2^"
 ---
 
-This is the edition for Oxford, Bodleian, Canonici Misc. 74.
+# Berlin, Staatsbibliothek, MSS Simulata Orientalia 6
 
 ```{r setup, include=FALSE}
 # Load the xml2 package
@@ -17,7 +17,7 @@ library(xml2)
 
 ```{r results='asis'}
 # Read the XML content
-xml_file <- read_xml("data/T-B.xml")
+xml_file <- read_xml("data/T-F2.xml")
 
 # Extract both <l>, <cb>, and <pb> elements
 lines <- xml_find_all(xml_file, "//text//l | //text//cb | //text//pb")
@@ -104,7 +104,7 @@ cat(formatted_text)
 
 ```{r results='asis'}
 # Read the XML content
-xml_file <- read_xml("data/T-B.xml")
+xml_file <- read_xml("data/T-F2.xml")
 
 # Extract the <l>, <cb>, and <pb> elements inside the <text> element
 lines <- xml_find_all(xml_file, "//text//l | //text//cb | //text//pb")
@@ -200,7 +200,7 @@ cat(formatted_text)
 
 ```{r results='asis'}
 # Read the XML content
-xml_file <- read_xml("data/T-B.xml")
+xml_file <- read_xml("data/T-F2.xml")
 
 # Extract the <l>, <cb>, and <pb> elements inside the <text> element
 lines <- xml_find_all(xml_file, "//text//l | //text//cb | //text//pb")
