--- a/index.qmd
+++ b/index.qmd
@@ -1,9 +1,5 @@
-# Preface {.unnumbered}
+# Abstract {.unnumbered}
 
-This is a Quarto book.
+This is where my abstract will go...
 
-To learn more about Quarto books visit <https://quarto.org/docs/books>.
 
-```{r}
-1 + 1
-```
